conformance/tests/backendtlspolicy-tlsroute-terminate.yaml
# Copyright IBM Corp. 2019, 2022
# SPDX-License-Identifier: Apache-2.0

apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-btls-tlsroute-terminate
  namespace: gateway-conformance-infra
spec:
  gatewayClassName: "{GATEWAY_CLASS_NAME}"
  listeners:
  - name: tls-terminate
    port: 8443
    protocol: TLS
    hostname: tls.example.com
    allowedRoutes:
      namespaces:
        from: Same
      kinds:
      - kind: TLSRoute
    tls:
      mode: Terminate
      certificateRefs:
      - name: tls-terminate-checks-certificate
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: backendtlspolicy-tlsroute-terminate
  namespace: gateway-conformance-infra
spec:
  parentRefs:
  - name: gateway-btls-tlsroute-terminate
    namespace: gateway-conformance-infra
  hostnames:
  - tls.example.com
  rules:
  - backendRefs:
    - name: btls-terminate-tls-backend
      port: 8443
---
apiVersion: v1
kind: Service
metadata:
  name: btls-terminate-tls-backend
  namespace: gateway-conformance-infra
spec:
  selector:
    app: tcp-backend
  ports:
  - name: "btls"
    protocol: TCP
    port: 8443
    targetPort: 8443
---
apiVersion: gateway.networking.k8s.io/v1
kind: BackendTLSPolicy
metadata:
  name: btls-tlsroute-terminate-test
  namespace: gateway-conformance-infra
spec:
  targetRefs:
  - group: ""
    kind: Service
    name: "btls-terminate-tls-backend"
    sectionName: "btls"
  validation:
    caCertificateRefs:
    - group: ""
      kind: ConfigMap
      name: "tls-checks-ca-certificate"
    hostname: "abc.example.com"
